Fix: Overflow issue on animation on scroll

--- a/public/output-style.css
+++ b/public/output-style.css
@@ -633,6 +633,10 @@ video {
   left: -0.75rem;
 }
 
+.-top-\[100vh\]{
+  top: -100vh;
+}
+
 .bottom-10{
   bottom: 2.5rem;
 }
@@ -647,6 +651,10 @@ video {
 
 .left-1\/2{
   left: 50%;
+}
+
+.left-3{
+  left: 0.75rem;
 }
 
 .right-0{
@@ -665,24 +673,24 @@ video {
   top: 50%;
 }
 
-.top-3{
-  top: 0.75rem;
-}
-
-.left-3{
-  left: 0.75rem;
-}
-
 .top-10{
   top: 2.5rem;
 }
 
-.-top-\[100vh\]{
-  top: -100vh;
+.top-3{
+  top: 0.75rem;
+}
+
+.z-0{
+  z-index: 0;
 }
 
 .z-10{
   z-index: 10;
+}
+
+.z-20{
+  z-index: 20;
 }
 
 .z-50{
@@ -695,14 +703,6 @@ video {
 
 .z-\[-1\]{
   z-index: -1;
-}
-
-.z-0{
-  z-index: 0;
-}
-
-.z-20{
-  z-index: 20;
 }
 
 .mx-auto{
@@ -740,10 +740,6 @@ video {
 
 .mt-\[100vh\]{
   margin-top: 100vh;
-}
-
-.mt-\[20vh\]{
-  margin-top: 20vh;
 }
 
 .flex{
@@ -814,6 +810,10 @@ video {
   width: 5rem;
 }
 
+.w-3\/4{
+  width: 75%;
+}
+
 .w-fit{
   width: -moz-fit-content;
   width: fit-content;
@@ -825,18 +825,6 @@ video {
 
 .w-screen{
   width: 100vw;
-}
-
-.w-2\/3{
-  width: 66.666667%;
-}
-
-.w-3\/5{
-  width: 60%;
-}
-
-.w-3\/4{
-  width: 75%;
 }
 
 .-translate-x-1\/2{
@@ -979,10 +967,6 @@ video {
   justify-self: start;
 }
 
-.justify-self-center{
-  justify-self: center;
-}
-
 .overflow-hidden{
   overflow: hidden;
 }
@@ -1115,21 +1099,6 @@ video {
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.py-10{
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 
 .pt-12{
@@ -1480,41 +1449,6 @@ video {
   top: 0px;
 }
 
-.before\:left-10::before{
-  content: var(--tw-content);
-  left: 2.5rem;
-}
-
-.before\:top-10::before{
-  content: var(--tw-content);
-  top: 2.5rem;
-}
-
-.before\:left-5::before{
-  content: var(--tw-content);
-  left: 1.25rem;
-}
-
-.before\:top-5::before{
-  content: var(--tw-content);
-  top: 1.25rem;
-}
-
-.before\:left-3::before{
-  content: var(--tw-content);
-  left: 0.75rem;
-}
-
-.before\:top-3::before{
-  content: var(--tw-content);
-  top: 0.75rem;
-}
-
-.before\:z-0::before{
-  content: var(--tw-content);
-  z-index: 0;
-}
-
 .before\:h-full::before{
   content: var(--tw-content);
   height: 100%;
@@ -1523,16 +1457,6 @@ video {
 .before\:w-full::before{
   content: var(--tw-content);
   width: 100%;
-}
-
-.before\:rounded-md::before{
-  content: var(--tw-content);
-  border-radius: 0.375rem;
-}
-
-.before\:border-2::before{
-  content: var(--tw-content);
-  border-width: 2px;
 }
 
 .before\:bg-black::before{
@@ -1551,6 +1475,11 @@ video {
   position: absolute;
 }
 
+.after\:left-0::after{
+  content: var(--tw-content);
+  left: 0px;
+}
+
 .after\:right-0::after{
   content: var(--tw-content);
   right: 0px;
@@ -1559,11 +1488,6 @@ video {
 .after\:top-0::after{
   content: var(--tw-content);
   top: 0px;
-}
-
-.after\:left-0::after{
-  content: var(--tw-content);
-  left: 0px;
 }
 
 .after\:z-0::after{
@@ -1619,30 +1543,6 @@ video {
   left: -0px;
 }
 
-.group:hover .group-hover\:top-0{
-  top: 0px;
-}
-
-.group:hover .group-hover\:left-0{
-  left: 0px;
-}
-
-.group:hover .group-hover\:left-5{
-  left: 1.25rem;
-}
-
-.group:hover .group-hover\:top-5{
-  top: 1.25rem;
-}
-
-.group:hover .group-hover\:left-3{
-  left: 0.75rem;
-}
-
-.group:hover .group-hover\:top-3{
-  top: 0.75rem;
-}
-
 .group:hover .group-hover\:-left-1{
   left: -0.25rem;
 }
@@ -1653,6 +1553,10 @@ video {
 
 .group:hover .group-hover\:left-4{
   left: 1rem;
+}
+
+.group:hover .group-hover\:top-0{
+  top: 0px;
 }
 
 .group:hover .group-hover\:top-4{
@@ -1672,28 +1576,13 @@ video {
   margin-top: -1rem;
 }
 
-.hover\:-translate-x-3:hover{
-  --tw-translate-x: -0.75rem;
+.hover\:-translate-y-2:hover{
+  --tw-translate-y: -0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:-translate-y-3:hover{
   --tw-translate-y: -0.75rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-translate-x-4:hover{
-  --tw-translate-x: -1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-translate-y-4:hover{
-  --tw-translate-y: -1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-translate-y-2:hover{
-  --tw-translate-y: -0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1749,10 +1638,6 @@ video {
 
   .md\:mt-5{
     margin-top: 1.25rem;
-  }
-
-  .md\:mt-52{
-    margin-top: 13rem;
   }
 
   .md\:mt-60{
@@ -1836,17 +1721,8 @@ video {
     background-color: transparent;
   }
 
-  .md\:bg-none{
-    background-image: none;
-  }
-
   .md\:p-0{
     padding: 0px;
-  }
-
-  .md\:px-10{
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
   }
 
   .md\:text-left{
@@ -1923,11 +1799,6 @@ video {
 }
 
 @media (min-width: 1536px){
-  .\32xl\:px-32{
-    padding-left: 8rem;
-    padding-right: 8rem;
-  }
-
   .\32xl\:px-44{
     padding-left: 11rem;
     padding-right: 11rem;
